adding_linters_and_extra_tasks
